# multiple-parser-example

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
module/: __main__.py
module/submodule1/: __main__.py
module/submodule2/: __main__.py
module/submodule3/: __main__.py
scripts/: random_script.py
src/aux_module1/: __main__.py  helper1.py
src/main_module/: __main__.py  sharedparser.py
src/main_module/submodule1/: __main__.py
src/main_module/submodule2/: __main__.py
src/main_module/submodule3/: __main__.py
