[project]
name = "multiple-parser-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua Hernandez",email = "I.Am.Mr.Josh.Hernandez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "main_module", from="src" },
    { include = "aux_module1", from="src" },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
